--- a/node/runtime/Cargo.toml
+++ b/node/runtime/Cargo.toml
@@ -15,6 +15,8 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 
+array-bytes = "4.1"
+
 # third-party dependencies
 codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
 	"derive",
