--- a/node/bench/Cargo.toml
+++ b/node/bench/Cargo.toml
@@ -17,7 +17,7 @@ clap = { version = "4.0.9", features = ["derive"] }
 log = "0.4.17"
 node-primitives = { version = "2.0.0", path = "../primitives" }
 node-testing = { version = "3.0.0-dev", path = "../testing" }
-kitchensink-runtime = { version = "3.0.0-dev", path = "../runtime" }
+thxnet-runtime = { version = "3.0.0-dev", path = "../runtime" }
 sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
 sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
 sp-state-machine = { version = "0.13.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
