--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -90,7 +90,7 @@ pallet-asset-tx-payment = { version = "4.0.0-dev", git = "https://github.com/par
 pallet-im-online = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
 
 # node-specific dependencies
-kitchensink-runtime = { version = "3.0.0-dev", path = "../runtime" }
+thxnet-runtime = { version = "3.0.0-dev", path = "../runtime" }
 node-rpc = { version = "3.0.0-dev", path = "../rpc" }
 node-primitives = { version = "2.0.0", path = "../primitives" }
 node-executor = { version = "3.0.0-dev", path = "../executor" }
@@ -153,12 +153,12 @@ cli = [
 	"try-runtime-cli",
 ]
 runtime-benchmarks = [
-	"kitchensink-runtime/runtime-benchmarks",
+	"thxnet-runtime/runtime-benchmarks",
 	"frame-benchmarking-cli/runtime-benchmarks"
 ]
 # Enable features that allow the runtime to be tried and debugged. Name might be subject to change
 # in the near future.
-try-runtime = ["kitchensink-runtime/try-runtime", "try-runtime-cli/try-runtime"]
+try-runtime = ["thxnet-runtime/try-runtime", "try-runtime-cli/try-runtime"]
 
 [[bench]]
 name = "transaction_pool"
