--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -45,49 +45,49 @@ log = "0.4.17"
 rand = "0.8"
 
 # primitives
-sp-authority-discovery = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sp-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-grandpa-primitives = { version = "4.0.0-dev", package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sp-inherents = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sp-keyring = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sp-keystore = { version = "0.13.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sp-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sp-transaction-storage-proof = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sp-io = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
+sp-authority-discovery = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sp-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+grandpa-primitives = { version = "4.0.0-dev", package = "sp-consensus-grandpa", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sp-inherents = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sp-keyring = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sp-keystore = { version = "0.13.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sp-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sp-transaction-storage-proof = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sp-io = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
 
 # client dependencies
-sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-chain-spec = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-network = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-network-common = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-grandpa = { version = "0.10.0-dev", package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-service = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-executor = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-authority-discovery = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-sync-state-rpc = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-sysinfo = { version = "6.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-storage-monitor = { version = "0.1.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
+sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-chain-spec = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-network = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-network-common = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+grandpa = { version = "0.10.0-dev", package = "sc-consensus-grandpa", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-service = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-executor = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-authority-discovery = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-sync-state-rpc = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-sysinfo = { version = "6.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-storage-monitor = { version = "0.1.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
 
 # frame dependencies
-frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-frame-system-rpc-runtime-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-pallet-transaction-payment = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-pallet-assets = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-pallet-asset-tx-payment = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-pallet-im-online = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
+frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+frame-system-rpc-runtime-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+pallet-transaction-payment = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+pallet-assets = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+pallet-asset-tx-payment = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+pallet-im-online = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
 
 # node-specific dependencies
 thxnet-runtime = { version = "3.0.0-dev", path = "../runtime" }
@@ -96,22 +96,22 @@ node-primitives = { version = "2.0.0", path = "../primitives" }
 node-executor = { version = "3.0.0-dev", path = "../executor" }
 
 # CLI-specific dependencies
-sc-cli = { version = "0.10.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-frame-benchmarking-cli = { version = "4.0.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
+sc-cli = { version = "0.10.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+frame-benchmarking-cli = { version = "4.0.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
 node-inspect = { version = "0.9.0-dev", optional = true, path = "../inspect" }
-try-runtime-cli = { version = "0.10.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
+try-runtime-cli = { version = "0.10.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
 serde_json = "1.0.85"
 
 [dev-dependencies]
-sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-client-db = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-consensus-epochs = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-service-test = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-block-builder = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sp-tracing = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
+sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-client-db = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-consensus-epochs = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-service-test = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-block-builder = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sp-tracing = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
 futures = "0.3.21"
 tempfile = "3.1.0"
 assert_cmd = "2.0.2"
@@ -124,20 +124,20 @@ criterion = { version = "0.4.0", features = ["async_tokio"] }
 tokio = { version = "1.22.0", features = ["macros", "time", "parking_lot"] }
 tokio-util = { version = "0.7.4", features = ["compat"] }
 wait-timeout = "0.2"
-substrate-rpc-client = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
+substrate-rpc-client = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
 
 [build-dependencies]
 clap = { version = "4.0.9", optional = true }
 clap_complete = { version = "4.0.2", optional = true }
 node-inspect = { version = "0.9.0-dev", optional = true, path = "../inspect" }
-frame-benchmarking-cli = { version = "4.0.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-substrate-build-script-utils = { version = "3.0.0", optional = true, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-substrate-frame-cli = { version = "4.0.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-try-runtime-cli = { version = "0.10.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02", optional = true }
-pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
-sc-storage-monitor = { version = "0.1.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-02" }
+frame-benchmarking-cli = { version = "4.0.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+substrate-build-script-utils = { version = "3.0.0", optional = true, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+substrate-frame-cli = { version = "4.0.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+try-runtime-cli = { version = "0.10.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03", optional = true }
+pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
+sc-storage-monitor = { version = "0.1.0", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-03" }
 
 [features]
 default = ["cli"]
